--- a/manifest.json
+++ b/manifest.json
@@ -2,9 +2,9 @@
 
     "manifest_version": 2,
     "name": "Embedded Emotes",
-    "version": "1.0",
+    "version": "1.0.1",
   
-    "description": "sort of like a clipboard, but for discord emotes",
+    "description": "Poor man's cross-server discord emotes, or a fancier permanent clipboard.",
 
     "icons": {
         "48": "icon.png"
@@ -18,6 +18,7 @@
 
     "permissions": [
         "menus",
+        "tabs",
         "activeTab",
         "contextMenus",
         "clipboardWrite",
