--- a/manifest.json
+++ b/manifest.json
@@ -19,7 +19,7 @@
     "content_scripts": [
         {
             "matches": ["*://*.discord.com/*"],
-            "js": ["searcher.js", "fuse.js"],
+            "js": ["searcher.js", "fuse.js", "copier.js"],
             "css": ["searcher.css"]
         }
     ],
